[tool.poetry]
name = "ml-gan-mnist"
version = "0.1.0"
description = ""
authors = ["Ross Parkin <ross.parkin@armakuni.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-aarch64 = { version = "2.7", markers = "platform_machine == 'aarch64'" }
matplotlib = "^3.5.2"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
